[package]
name = "seikyo_notifier"
version = "0.1.0"
authors = ["KMConner <KMConner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
reqwest = { version = "0.11", features = ["default-tls", "blocking"] }
chrono = "0.4.19"
md5 = "0.7.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
